--- a/nav style1.html
+++ b/nav style1.html
@@ -1,7 +1,8 @@
 <html>
     <head>
         <link href="https://fonts.googleapis.com/css?family=Lora|Ubuntu:400,700&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="nav%20style1.css">
+        <link rel="stylesheet" href="nav style1.css">
+
     </head>
     <body> 
         <header>
@@ -20,4 +21,4 @@
             </div> <!-- / .container -->
         </header>
     </body>
-</html>
+</html>  
