--- a/nav style1.html
+++ b/nav style1.html
@@ -16,6 +16,8 @@
                         <li><a href="#">Home</a></li>
                         <li><a href="#">About me</a></li>
                         <li><a href="#">Recent posts</a></li>
+                        <!-- always use <li><a href="#">Recent posts</a></li> not just <a></a> -->
+                        
                     </ul>
                 </nav>
             </div> <!-- / .container -->
